# mygame

./: CMakeLists.txt  README.md
include/: 4becs.hpp  bfECS.hpp  moreTypes.hpp  typedefs.hpp
src/: Arena.hpp  Button.cpp  Button.hpp  Click.hpp  Comps.hpp  EntArena.cpp  EntArena.hpp  FpsCounter.hpp  GEnt.hpp  Gent.cpp  Player.cpp  Player.hpp  Raycast.cpp  Raycast.hpp  frameTimer.hpp  globals.cpp  globals.hpp  hitboxes.cpp  hitboxes.hpp  main.cpp  mapGrid.cpp  mapGrid.hpp  old_arena.cpp  old_arena.hpp  take.hpp
